Fixed OG Images For fb

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="11street Ecommerce Platform"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://www.11street.co.th/"/>
-    <meta property="og:image" content="/assets/img/cover.jpg"/>
+    <meta property="og:images" content="/assets/img/cover.jpg"/>
     <meta property="og:site_name" content="11street"/>
     <meta property="og:description" content="11street Ecommerce Platform Website Ecommerce Number One From Korea"/>
     <meta name="twitter:card" content="summary" />
