--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta property="og:title" content="11street Ecommerce Platform"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.11street.co.th/"/>
+    <meta property="og:url" content="http://mytest11st.s3-website-ap-southeast-1.amazonaws.com/"/>
     <meta property="og:images" content="/assets/img/cover.jpg"/>
     <meta property="og:site_name" content="11street"/>
     <meta property="og:description" content="11street Ecommerce Platform Website Ecommerce Number One From Korea"/>
@@ -25,7 +25,7 @@
     <meta name="twitter:title" value="11street - Ecommerce Platform"/>
     <meta name="twitter:image" value="/assets/img/cover.jpg"/>
     <meta name="twitter:description" value="11street Ecommerce Platform Website Ecommerce Number One From Korea"/>
-    <meta name="twitter:domain" content="www.11street.co.th">
+    <meta name="twitter:domain" content="http://mytest11st.s3-website-ap-southeast-1.amazonaws.com/">
 
     <link href="/assets/css/swiper.css" rel="stylesheet">
     <link href="/assets/css/main.css" rel="stylesheet">
